deploy-v1.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-app-v1
  namespace: test
  labels:
    app: hello-app-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app-v1
  template:
    metadata:
      labels:
        app: hello-app-v1
    spec:
      containers:
      - name: hello-app-v1
        image: gcr.io/google-samples/hello-app:1.0
