deploy-v2.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hello-app-v2
  namespace: test
  labels:
    app: hello-app-v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-app-v2
  template:
    metadata:
      labels:
        app: hello-app-v2
    spec:
      containers:
      - name: hello-app-v2
        image: gcr.io/google-samples/hello-app:2.0
