service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-app-v1
  namespace: test
spec:
  selector:
    app: hello-app-v1
  ports:
  - name: http
    targetPort: 8080
    port: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-app-v2
  namespace: test
spec:
  selector:
    app: hello-app-v2
  ports:
  - name: http
    targetPort: 8080
    port: 80
